# test-failer-in-cpp-art-pogorelov

./: CMakeLists.txt  main-test.cpp  misaligned.cpp  tshirts.cpp  weatherreport.cpp
lib/: CMakeLists.txt
lib/include/: ColorCodes.h  TShirts.h  WeatherReport.h
lib/include/ColorMap/: Print.h
lib/include/TShirts/: Print.h  Size.h  SizeLimits.h
lib/include/Weather/: IWeatherSensor.h  WeatherReport.h
lib/src/: ColorCodes.cpp  TShirts.cpp  WeatherReport.cpp
lib/src/ColorMap/: Print.cpp
lib/src/TShirts/: Print.cpp  Size.cpp  SizeLimits.cpp
lib/src/Weather/: WeatherReport.cpp
lib/test/: CMakeLists.txt
lib/test/src/: ColorCodesTest.cpp  SensorStub.h  TShirtsTest.cpp  WeatherReportTest.cpp
